        still supported as fall-backs.  See Products/Five/doc/i18n.txt
        for more information.

      - Switched to the new improved test runner from Zope 3.  Run
        test.py with -h to find out more.

      - lib/python/docutils is now a reference to docutils package
        from the Zope 3 source tree (to get rid of redundant packages)

    Bugs Fixed

      - Collector #1991: ZPublisher did not deal properly with a trailing
        %20 in the URL

      - zope.app.introspector was not included with the source archive

      - Collector #2013: improved XHTML conformance of error messages,
        some of which did not close '<p>' tags.

      - Collector #2002: fixed broken 'ls -R' functionality (didn't
        recurse properly subclasses of OFS.Folder)

      - Collector #1992: unified the visible hostnames of the FTP and
        HTTP servers

      - Collector #1999: fixed broken FTP rename functionality
        (RNFR now returns 350 as status code instead 250)

      - HTTPResponse: for XML content the encoding specified within
        the XML preamble is adjusted to the real encoding of the content
        as specified through the 'charset' within the content-type
        property.

      - Collector #1939: When running as a service, Zope could
        potentially collect too much log output filling the NT Event
        Log. When that happened, a 'print' during exception handling
        would cause an IOError in the restart code causing the service
        not to restart automatically.

        Problem is that a service/pythonw.exe process *always* has an
        invalid sys.stdout.  But due to the magic of buffering, small
        "print" statements would not fail - but once the file actually
        got written to, the error happened.  Never a problem when
        debugging, as the process has a console, and hence a valid
        stdout.

      - For content-type HTTP headers starting with 'text/' or 'application/'